Fixed install for gem2mt

--- a/nodearray-gem/CMakeLists.txt
+++ b/nodearray-gem/CMakeLists.txt
@@ -24,7 +24,7 @@ if(BUILD_SHARED_LIBS)
     add_library(GEMS3K::GEM2MT ALIAS GEM2MT)
     target_link_libraries(GEM2MT PUBLIC GEMS3K::GEMS3K)
     install( TARGETS GEM2MT
-             EXPORT GEM2MTTargets DESTINATION "lib" COMPONENT libraries)
+             EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
     # Install debug symbols
     if(MSVC)
        install(
@@ -42,7 +42,7 @@ if(BUILD_STATIC_LIBS)
    add_library(GEMS3K::GEM2MT-static ALIAS GEM2MT-static)
    target_link_libraries(GEM2MT-static PUBLIC GEMS3K::GEMS3K-static)
    install( TARGETS GEM2MT-static
-           EXPORT GEM2MTTargets DESTINATION "lib" COMPONENT libraries)
+           EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
 endif()
 
 # Create an install target for the header files
