--- a/environment.devenv.yml
+++ b/environment.devenv.yml
@@ -4,15 +4,26 @@ channels:
   - conda-forge
 
 dependencies:
-  - gxx_linux-64  # [linux]
+  - pip
+  - gxx_linux-64>=9.4.0  # [linux]
   - cmake>=3.13
   - ninja
   - git
   - ccache  # [unix]
+  - pybind11
   - nlohmann_json
   - thermofun>=0.4.3
+  - python>=3.7
+  - pytest
 
 environment:
+
+  PYTHONPATH:
+    - {{ root }}/artifacts/python/lib/python{{ python_version }}/site-packages   # [unix]
+    - {{ root }}/build/lib/python{{ python_version }}/site-packages              # [unix]
+    - {{ root }}/build/lib64/python{{ python_version }}/site-packages            # [unix]
+    - {{ root }}\artifacts\python\Lib\site-packages                              # [win]
+    - {{ root }}\build\lib\python{{ python_version }}\site-packages              # [win]
 
   LD_LIBRARY_PATH:                                                   # [unix]
     - {{ root }}/artifacts/lib                                       # [unix]
