--- a/environment.yml
+++ b/environment.yml
@@ -8,5 +8,9 @@ dependencies:
 - gxx_linux-64
 - ninja
 - nlohmann_json
+- pip
+- pybind11
+- pytest
+- python >=3.7
 - thermofun>=0.4.3
 name: GEMS3K
