GEMS-225: Renamed classes and files, fixed scripts

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ install/
 cgems/
 GEMS3K/ms_multi_new.h
 GEMS3K/s_fgl_new.h
+tsolmod4rkt-build/
 tools-build/*.json
 tools-build/*.dat
 tools-build/*.txt
