Changed python install

--- a/tsolmod4rkt/python/solmod4rkt/CMakeLists.txt
+++ b/tsolmod4rkt/python/solmod4rkt/CMakeLists.txt
@@ -33,8 +33,24 @@ add_dependencies(solmod4rkt PySolmod4rkt)
 
 # Set the path where the python package is installed to CMAKE_INSTALL_PREFIX if not given
 if(NOT DEFINED SOLMOD4RKT_PYTHON_INSTALL_PREFIX)
-  set(SOLMOD4RKT_PYTHON_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
-endif()
+
+# Install the SOLMOD4RKT python package
+install(CODE
+"
+    if(EXISTS ${CMAKE_CURRENT_BINARY_DIR}/../../../lib/PySolmod4rkt.pdb)
+        string(REPLACE .pyd .pdb SOLMOD4RKT_PDB_FILENAME \"${SOLMOD4RKT_PYTHON_MODULE_FILENAME}\")
+
+        execute_process(
+            COMMAND \${CMAKE_COMMAND} -E copy ../../../lib/PySolmod4rkt.pdb \${SOLMOD4RKT_PDB_FILENAME}
+            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+    endif()
+
+    execute_process(
+        COMMAND ${PYTHON_EXECUTABLE} -m pip install ${CMAKE_CURRENT_BINARY_DIR}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+")
+else()
+
 # If the path is already in Windows format (with backslashes), it can't be added directly
 # to the string below, otherwise CMake will later complain about "Invalid escape sequence".
 file(TO_CMAKE_PATH "${SOLMOD4RKT_PYTHON_INSTALL_PREFIX}" SOLMOD4RKT_PYTHON_INSTALL_PREFIX)
@@ -53,9 +69,7 @@ install(CODE
     endif()
 
     execute_process(
-        COMMAND ${PYTHON_EXECUTABLE} -m pip install ${CMAKE_CURRENT_BINARY_DIR}
+    COMMAND ${PYTHON_EXECUTABLE} -m pip install --prefix \${SOLMOD4RKT_PYTHON_INSTALL_PREFIX_NATIVE} ${CMAKE_CURRENT_BINARY_DIR}
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
-"
-)
-
-#        COMMAND ${PYTHON_EXECUTABLE} -m pip install --prefix \${SOLMOD4RKT_PYTHON_INSTALL_PREFIX_NATIVE} ${CMAKE_CURRENT_BINARY_DIR}
+")
+endif()
