--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ install/
 cgems/
 GEMS3K/ms_multi_new.h
 GEMS3K/s_fgl_new.h
+tsolmod4rkt/*.pro.user
+tsolmod4rkt/*.pro.user.*
 tsolmod4rkt-build/
 tools-build/*.json
 tools-build/*.dat
