Hide build shared lib

--- a/GEMS3K/CMakeLists.txt
+++ b/GEMS3K/CMakeLists.txt
@@ -43,10 +43,10 @@ if(BUILD_STATIC_LIBS)
    if(USE_THERMOFUN MATCHES ON)
      target_link_libraries(GEMS3K-static PUBLIC ThermoFun::ThermoFun)
    endif()
-   if(USE_SPDLOG_PRECOMPILED)
-      target_compile_definitions(GEMS3K-static PUBLIC USE_SPDLOG_PRECOMPILED)
-      target_link_libraries(GEMS3K-static PUBLIC spdlog::spdlog)
-   endif()
+   #if(USE_SPDLOG_PRECOMPILED)
+   #   target_compile_definitions(GEMS3K-static PUBLIC USE_SPDLOG_PRECOMPILED)
+   #   target_link_libraries(GEMS3K-static PUBLIC spdlog::spdlog)
+   #endif()
    install( TARGETS GEMS3K-static
            EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
 endif()
