--- a/GEMS3K/CMakeLists.txt
+++ b/GEMS3K/CMakeLists.txt
@@ -10,18 +10,27 @@ file(GLOB SOURCE_FILES *.cpp)
 # Compile the C++ source code into object files
 add_library(GEMS3K_OBJECT OBJECT ${HEADER_FILES} ${SOURCE_FILES})
 
+if(USE_SPDLOG_PRECOMPILED)
+   if(NOT TARGET spdlog::spdlog)
+       find_package(spdlog CONFIG REQUIRED)
+   endif()
+endif()
+
+
 # Check if a shared library is to be built
 if(BUILD_SHARED_LIBS)
     # Enable automatic creation of a module definition (.def) file for a SHARED library on Windows.
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
     add_library(GEMS3K SHARED $<TARGET_OBJECTS:GEMS3K_OBJECT>)
     add_library(GEMS3K::GEMS3K ALIAS GEMS3K)
-    if(USE_SPDLOG_PRECOMPILED)
+    if(USE_THERMOFUN MATCHES ON)
+      target_compile_definitions(GEMS3K PUBLIC USE_SPDLOG_PRECOMPILED)
+      target_link_libraries(GEMS3K PUBLIC ThermoFun::ThermoFun)
+    else()
+      if(USE_SPDLOG_PRECOMPILED)
          target_compile_definitions(GEMS3K PUBLIC USE_SPDLOG_PRECOMPILED)
          target_link_libraries(GEMS3K PUBLIC spdlog::spdlog)
-    endif()
-    if(USE_THERMOFUN MATCHES ON)
-      target_link_libraries(GEMS3K PUBLIC ThermoFun::ThermoFun)
+      endif()
     endif()
     install( TARGETS GEMS3K
              EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
@@ -42,11 +51,12 @@ if(BUILD_STATIC_LIBS)
     add_library(GEMS3K::GEMS3K-static ALIAS GEMS3K-static)
    if(USE_THERMOFUN MATCHES ON)
      target_link_libraries(GEMS3K-static PUBLIC ThermoFun::ThermoFun)
+   else()
+       if(USE_SPDLOG_PRECOMPILED)
+          target_compile_definitions(GEMS3K-static PUBLIC USE_SPDLOG_PRECOMPILED)
+          target_link_libraries(GEMS3K-static PUBLIC spdlog::spdlog)
+       endif()
    endif()
-   #if(USE_SPDLOG_PRECOMPILED)
-   #   target_compile_definitions(GEMS3K-static PUBLIC USE_SPDLOG_PRECOMPILED)
-   #   target_link_libraries(GEMS3K-static PUBLIC spdlog::spdlog)
-   #endif()
    install( TARGETS GEMS3K-static
            EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
 endif()
