--- a/environment.devenv.yml
+++ b/environment.devenv.yml
@@ -5,14 +5,14 @@ channels:
 
 dependencies:
   - pip
-  - gxx_linux-64>=9.4.0  # [linux]
+  - gxx_linux-64  # [linux]
   - cmake>=3.13
   - ninja
   - git
   - ccache  # [unix]
   - pybind11
   - nlohmann_json
-  - thermofun>=0.4.3
+  #- thermofun>=0.4.3
   - python>=3.7
   - pytest
 
