--- a/tsolmod4rkt/python/CMakeLists.txt
+++ b/tsolmod4rkt/python/CMakeLists.txt
@@ -2,7 +2,7 @@
 #find_package(pybind11 REQUIRED)
 
 # Build the Python wrappers of tsolmod4rkt library
-#add_subdirectory(PySolmod4rkt)
+add_subdirectory(PySolmod4rkt)
 
 # Build the Python package for built-in mixing models
-#add_subdirectory(solmod4rkt)
+add_subdirectory(solmod4rkt)
