--- a/.github/workflows/deploy-windows.yml
+++ b/.github/workflows/deploy-windows.yml
@@ -60,7 +60,7 @@ jobs:
         shell: cmd
         run: |
           call conda activate GEMS3K || goto :eof
-          call conda-install-dependencies.bat || goto :eof
+#          call conda-install-dependencies.bat || goto :eof
           cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=${{ steps.strings.outputs.deploy-output-dir }} -A x64 -S . -B build  || goto :eof
           cmake --build build --target install --config Release || goto :eof
 
