Build shared for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,9 +46,9 @@ option(BUILD_TOOLS "Build tools" ON)
 option(BUILD_SOLMOD "Build isolate TSolMod " ON)
 
 # Currently is not setup to produce a dynamic library using MSVC, only static
-if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
-    set(BUILD_SHARED_LIBS OFF)
-endif()
+#if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
+#    set(BUILD_SHARED_LIBS OFF)
+#endif()
 
 # Used into conda only
 if(DEFINED ENV{CONDA_PREFIX})
