--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -52,7 +52,7 @@ jobs:
         if: matrix.os != 'windows-latest'
         shell: bash -l {0}
         run: |
-          conda activate GEMSGUI
+          conda activate GEMS3K
           mkdir .build && cd .build
           cmake -GNinja .. -DCMAKE_BUILD_TYPE=Release
           ninja
@@ -62,7 +62,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: cmd
         run: |
-          call conda activate GEMSGUI || goto :eof
+          call conda activate GEMS3K || goto :eof
           cmake -DCMAKE_BUILD_TYPE=Release -A x64 -S . -B build  || goto :eof
           cmake --build build --target install  --config Release  || goto :eof
 
