--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -63,8 +63,8 @@ jobs:
         shell: cmd
         run: |
           call conda activate GEMS3K || goto :eof
-          cmake -DCMAKE_BUILD_TYPE=Release -A x64 -S . -B build  || goto :eof
-          cmake --build build --target install  --config Release  || goto :eof
+          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX:PATH="%CONDA_PREFIX%\Library" -A x64 -S . -B build  || goto :eof
+          cmake --build build --target install --config Release || goto :eof
 
       - name: Check conda
         run: |
