--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -17,17 +17,14 @@ jobs:
         os:
           - ubuntu-latest
           - windows-latest
-          - macos-13
+          - macos-latest
         include:
           - os: ubuntu-latest
             conda_platform: linux-64
-            artifact_name: gems3k-linux
           - os: windows-latest
             conda_platform: win-64
-            artifact_name: gems3k-windows
-          - os: macos-13
+          - os: macos-latest
             conda_platform: osx-64
-            artifact_name: gems3k-macos
 
     steps:
 
@@ -57,6 +54,7 @@ jobs:
           cmake -GNinja .. -DCMAKE_BUILD_TYPE=Release
           ninja
           ninja install
+          python -c "import solmod4rkt"
 
       - name: Building, Testing & Installing GEMS3K (Windows)
         if: matrix.os == 'windows-latest'
@@ -65,6 +63,7 @@ jobs:
           call conda activate GEMS3K || goto :eof
           cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX:PATH="%CONDA_PREFIX%\Library" -A x64 -S . -B build  || goto :eof
           cmake --build build --target install --config Release || goto :eof
+          python -c "import solmod4rkt" || goto :eof
 
       - name: Check conda
         run: |
