Restore build static

--- a/GEMS3K/CMakeLists.txt
+++ b/GEMS3K/CMakeLists.txt
@@ -16,35 +16,52 @@ if(USE_SPDLOG_PRECOMPILED)
    endif()
 endif()
 
+# Check if a shared library is to be built
+if(BUILD_SHARED_LIBS)
+   # Enable automatic creation of a module definition (.def) file for a SHARED library on Windows.
+   set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
 
-# Enable automatic creation of a module definition (.def) file for a SHARED library on Windows.
-set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
+   add_library(GEMS3K ${HEADER_FILES} ${SOURCE_FILES})
+   add_library(GEMS3K::GEMS3K ALIAS GEMS3K)
+   if(USE_THERMOFUN MATCHES ON)
+       target_compile_definitions(GEMS3K PUBLIC USE_SPDLOG_PRECOMPILED)
+       target_link_libraries(GEMS3K PUBLIC ThermoFun::ThermoFun)
+   else()
+       if(USE_SPDLOG_PRECOMPILED)
+           target_compile_definitions(GEMS3K PUBLIC USE_SPDLOG_PRECOMPILED)
+           target_link_libraries(GEMS3K PUBLIC spdlog::spdlog)
+       endif()
+   endif()
 
-add_library(GEMS3K ${HEADER_FILES} ${SOURCE_FILES})
-add_library(GEMS3K::GEMS3K ALIAS GEMS3K)
-if(USE_THERMOFUN MATCHES ON)
-      target_compile_definitions(GEMS3K PUBLIC USE_SPDLOG_PRECOMPILED)
-      target_link_libraries(GEMS3K PUBLIC ThermoFun::ThermoFun)
-else()
-      if(USE_SPDLOG_PRECOMPILED)
-         target_compile_definitions(GEMS3K PUBLIC USE_SPDLOG_PRECOMPILED)
-         target_link_libraries(GEMS3K PUBLIC spdlog::spdlog)
-      endif()
-endif()
-
-install( TARGETS GEMS3K
+   install( TARGETS GEMS3K
              EXPORT GEMS3KTargets
              ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT libraries
              LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT libraries
              RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT libraries)
 
-# Install debug symbols
-if(MSVC)
-    install(
-        FILES $<TARGET_PDB_FILE:GEMS3K>
-        DESTINATION ${CMAKE_INSTALL_BINDIR}
-        COMPONENT libraries
-        OPTIONAL)
+    # Install debug symbols
+    if(MSVC)
+        install(
+           FILES $<TARGET_PDB_FILE:GEMS3K>
+           DESTINATION ${CMAKE_INSTALL_BINDIR}
+           COMPONENT libraries
+           OPTIONAL)
+    endif()
+endif()
+
+# Check if a static library is to be built
+if(BUILD_STATIC_LIBS)
+   add_library(GEMS3K-static STATIC ${HEADER_FILES} ${SOURCE_FILES})
+    add_library(GEMS3K::GEMS3K-static ALIAS GEMS3K-static)
+   if(USE_THERMOFUN MATCHES ON)
+     target_link_libraries(GEMS3K-static PUBLIC ThermoFun::ThermoFun)
+   endif()
+   #if(USE_SPDLOG_PRECOMPILED)
+   #   target_compile_definitions(GEMS3K-static PUBLIC USE_SPDLOG_PRECOMPILED)
+   #   target_link_libraries(GEMS3K-static PUBLIC spdlog::spdlog)
+   #endif()
+   install( TARGETS GEMS3K-static
+           EXPORT GEMS3KTargets DESTINATION "lib" COMPONENT libraries)
 endif()
 
 # Install GEMS3K header files
