--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -2,7 +2,7 @@ name: ci-build
 on:
   push:
     branches:
-      - no_client_mode
+      - free_bug
       - master
       - main
   pull_request:
@@ -21,14 +21,17 @@ jobs:
         os:
           - ubuntu-latest
           - windows-latest
+          - macos-13
           - macos-latest
         include:
           - os: ubuntu-latest
             conda_platform: linux-64
           - os: windows-latest
             conda_platform: win-64
-          - os: macos-latest
+          - os: macos-13
             conda_platform: osx-64
+          - os: macos-latest
+            conda_platform: osx-arm64
 
     steps:
 
