--- a/environment.devenv.yml
+++ b/environment.devenv.yml
@@ -5,15 +5,16 @@ channels:
   - defaults
 
 dependencies:
-  - pip
   - gxx_linux-64 # [linux]
   - cmake>=3.16
   - ninja
   - git
   - ccache  # [unix]
+  - python>=3.10
+  - pip
+  - pytest
   - pybind11
   - nlohmann_json
+  - chemicalfun=0.1.12
   - thermofun>=0.5.0
-  - python>=3.12
-  - pytest
 
