--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -69,11 +69,11 @@ jobs:
           cmake --build build --target install --config Release || goto :eof
           python -c "import solmod4rkt" || goto :eof
 
-      - name: Run tests that read chemicalfun
+      - name: Run tests that read GEMS3K
         shell: bash -l {0}
         run: |
-          conda activate chemicalfun
-          python -c "import chemicalfun"
+          conda activate GEMS3K
+          python -c "import solmod4rkt"
           conda list
 
       - name: Check conda
