Changed default  USE_THERMOFUN  for optional NO_USE_THERMOFUN

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,8 +152,9 @@ configure_file(
 # Set some necessary definitions
 add_definitions(-DNODEARRAYLEVEL)
 
-if(USE_THERMOFUN MATCHES ON)
-  add_definitions(-DUSE_THERMOFUN)
+if(USE_THERMOFUN MATCHES OFF)
+  add_definitions(-DNO_USE_THERMOFUN)
+else()
   #add_definitions(-DUSE_THERMO_LOG)
 endif()
 
